# student_behavior_web

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: auth_api.py  routers.py  students_api.py
app/: main.py  routers.py
app/core/: config.py
app/db/: crud.py
app/services/: enrollment.py
app/static/: output.css
app/templates/partials/: student_list.html
core/: config.py  constants.py  database.py  fastapi_logger.py  fastapi_util.py  loggerconfig.py  loggingmp.py  middleware.py  osutils.py  pbutils.py
db/: crud.py  models.py  vector_db.py
services/: ai_loader.py  enrollment.py  pipeline.py
templates/: faces.html  index.html  layout.html  students.html
templates/partials/: dashboard.html
web/: router.py
